Algaeh Form group wrappers in all the Masters and Multi Lingual Functionality

--- a/client/public/languages/BusinessSetup_ar.json
+++ b/client/public/languages/BusinessSetup_ar.json
@@ -6,6 +6,7 @@
   "inactive": "غير نشط",
   "department_code": "رمز الإدارة",
   "department_name": "اسم القسم",
+  "department_name_arabic": "اسم الدائرة العربية",
   "effective_start_date": "تاريخ البدء الفعلي",
   "department_type": "نوع القسم",
   "head_department": "القسم الرئيسي",
