Edit feature in masters and other enhancements

--- a/client/public/languages/BusinessSetup_ar.json
+++ b/client/public/languages/BusinessSetup_ar.json
@@ -14,17 +14,17 @@
   "options": "خيارات",
   "transaction": "المعاملات",
   "numbering": "ترقيم",
-  "options_code": "رمز الخيارات",
-  "module_name": "اسم الوحدة النمطية",
+  "numgen_code": "رمز الخيارات",
+  "module_desc": "اسم الوحدة النمطية",
   "prefix": "البادئة",
-  "intermediate_Series": "سلسلة متوسطة",
+  "intermediate_series": "سلسلة متوسطة",
   "postfix": "الإصلاح",
   "length": "الطول",
   "increment_by": "لزيادة من قبل",
-  "seperator": "منقب",
+  "numgen_seperator": "منقب",
   "postfix_start": "بدء الإصلاح",
   "postfix_end": "نهاية الإصلاح",
-  "current_number": "الرقم الحالي",
+  "current_num": "الرقم الحالي",
   "label_setup": "إعداد التسمية",
   "episode_creation": "إنشاء الحلقة",
   "option": "الخيار",
