--- a/client/public/languages/BusinessSetup_en.json
+++ b/client/public/languages/BusinessSetup_en.json
@@ -14,17 +14,17 @@
   "options": "Options",
   "transaction": "Transaction",
   "numbering": "Numbering",
-  "options_code": "Options Code",
-  "module_name": "Module Name",
+  "numgen_code": "Options Code",
+  "module_desc": "Module Name",
   "prefix": "Prefix",
-  "intermediate_Series": "Intermediate Series",
+  "intermediate_series": "Intermediate Series",
   "postfix": "Postfix",
   "length": "Length",
   "increment_by": "Increment By",
-  "seperator": "Seperator",
+  "numgen_seperator": "Seperator",
   "postfix_start": "Postfix Start",
   "postfix_end": "Postfix End",
-  "current_number": "Current Number",
+  "current_num": "Current Number",
   "label_setup": "Label Setup",
   "episode_creation": "Episode Creation",
   "option": "Option",
