--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -5,6 +5,8 @@
   "first_name": "First Name",
   "middle_name": "Middle Name",
   "last_name": "Last Name",
+  "full_name": "Name",
+  "arabic_name": "Name in Arabic",
   "gender": "Gender",
   "religion_id": "Relegion",
   "date_of_birth": "Date Of Birth",
@@ -55,5 +57,6 @@
   "form_yes": "Yes",
   "form_no": "No",
   "hijiri_date": "Hijiri Date",
-  "attach_photo": "Attach Photo"
+  "attach_photo": "Attach Photo",
+  "attach_idcard": "Attach ID Card"
 }
