--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -8,7 +8,7 @@
   "full_name": "Name",
   "arabic_name": "Name in Arabic",
   "gender": "Gender",
-  "religion_id": "Relegion",
+  "religion_id": "Religion",
   "date_of_birth": "Date Of Birth",
   "age": "Age",
   "marital_status": "Marital Status",
