Billing Arabic Language Changes and few functionalities done

--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -58,5 +58,30 @@
   "form_no": "لا",
   "hijiri_date": "التاريخ الهجري",
   "attach_photo": "إرفاق صورة",
-  "attach_idcard": "إرفاق بطاقة الهوية"
+  "attach_idcard": "إرفاق بطاقة الهوية",
+  "service_type_id": "نوع الخدمة",
+  "services_id": "قانون الفاتورة",
+  "quantity": "كمية",
+  "unit_cost": "تكلفة الوحدة",
+  "gross_amount": "المبلغ الإجمالي",
+  "discount_percentage": "خصم %",
+  "discount_amout": "مقدار الخصم",
+  "net_amout": "كمية الشبكة",
+  "insurance": "تأمين",
+  "copay_amount": "كمية المبلغ",
+  "deductable_amount": "المبلغ القابل للاقتطاع",
+  "tax_inclusive": "الضرائب شاملة",
+  "patient_tax": "ضريبة المريض",
+  "company_tax": "ضريبة الشركات",
+  "total_tax": "مجموع الضريبة",
+  "patient_resp": "المريض المسؤولية",
+  "patient_payable": "المريض مستحق",
+  "comapany_resp": "مسؤولية الشركة",
+  "company_payble": "شركة مستحقة الدفع",
+  "sec_company": "",
+  "sec_deductable_amount": "",
+  "sec_company_res": "",
+  "sec_company_tax": "",
+  "sec_company_paybale": "",
+  "sec_copay_amount": ""
 }
