--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -58,5 +58,30 @@
   "form_no": "No",
   "hijiri_date": "Hijiri Date",
   "attach_photo": "Attach Photo",
-  "attach_idcard": "Attach ID Card"
+  "attach_idcard": "Attach ID Card",
+  "service_type_id": "Service Type",
+  "services_id": "Bill Code",
+  "quantity": "Quantity",
+  "unit_cost": "Unit Cost",
+  "gross_amount": "Gross Amount",
+  "discount_percentage": "Discount %",
+  "discount_amout": "Discount Amt.",
+  "net_amout": "Net Amount",
+  "insurance": "Insurance",
+  "copay_amount": "Copay Amt.",
+  "deductable_amount": "Deductable Amt.",
+  "tax_inclusive": "Tax Inclusive",
+  "patient_tax": "Pat. Tax",
+  "company_tax": "Comp. Tax",
+  "total_tax": "Total Tax",
+  "patient_resp": "Pat. Resp.",
+  "patient_payable": "Pat. Payable",
+  "comapany_resp": "Comp. Resp.",
+  "company_payble": "Comp. Payable",
+  "sec_company": "Sec. Comp. ",
+  "sec_deductable_amount": "",
+  "sec_company_res": "",
+  "sec_company_tax": "",
+  "sec_company_paybale": "",
+  "sec_copay_amount": ""
 }
