--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -59,29 +59,29 @@
   "hijiri_date": "التاريخ الهجري",
   "attach_photo": "إرفاق صورة",
   "attach_idcard": "إرفاق بطاقة الهوية",
-  "service_type_id": "نوع الخدمة",
-  "services_id": "قانون الفاتورة",
-  "quantity": "كمية",
-  "unit_cost": "تكلفة الوحدة",
-  "gross_amount": "المبلغ الإجمالي",
-  "discount_percentage": "خصم %",
-  "discount_amout": "مقدار الخصم",
-  "net_amout": "كمية الشبكة",
-  "insurance": "تأمين",
-  "copay_amount": "كمية المبلغ",
-  "deductable_amount": "المبلغ القابل للاقتطاع",
-  "tax_inclusive": "الضرائب شاملة",
-  "patient_tax": "ضريبة المريض",
-  "company_tax": "ضريبة الشركات",
-  "total_tax": "مجموع الضريبة",
-  "patient_resp": "المريض المسؤولية",
-  "patient_payable": "المريض مستحق",
-  "comapany_resp": "مسؤولية الشركة",
-  "company_payble": "شركة مستحقة الدفع",
-  "sec_company": "",
-  "sec_deductable_amount": "",
-  "sec_company_res": "",
-  "sec_company_tax": "",
-  "sec_company_paybale": "",
-  "sec_copay_amount": ""
+  "bill": "مشروع قانون",
+  "gross_total": "المجموع الكلي",
+  "share": "شارك",
+  "patient_share": "صبور",
+  "company_share": "شركة",
+  "advance": "تقدم",
+  "advance_adjust": "يعدل",
+  "sheet_discount_amount": "كمية",
+  "bill_amount": "مبلغ الفاتورة",
+  "sheet_discount": "خصم ورقة المستوى",
+  "net_amount": "شبكة",
+  "credit_amount": "ائتمان",
+  "receiveable_amount": "ذمم مدينة",
+
+  "receipt_number": "عدد إيصال",
+  "receipt_date": "تاريخ استلام",
+  "counter": "عداد",
+  "shift": "تحول",
+  "total_amount": "المبلغ الإجمالي",
+  "sl_no": "SL. لا.",
+  "pay_type": "نوع الدفع",
+  "card_check_number": "رقم",
+  "expiry_date": "تاريخ الانتهاء",
+  "amount": "كمية",
+  "unbalanced_amount": "المبلغ غير المتوازن"
 }
