--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -59,29 +59,28 @@
   "hijiri_date": "Hijiri Date",
   "attach_photo": "Attach Photo",
   "attach_idcard": "Attach ID Card",
-  "service_type_id": "Service Type",
-  "services_id": "Bill Code",
-  "quantity": "Quantity",
-  "unit_cost": "Unit Cost",
-  "gross_amount": "Gross Amount",
-  "discount_percentage": "Discount %",
-  "discount_amout": "Discount Amt.",
-  "net_amout": "Net Amount",
-  "insurance": "Insurance",
-  "copay_amount": "Copay Amt.",
-  "deductable_amount": "Deductable Amt.",
-  "tax_inclusive": "Tax Inclusive",
-  "patient_tax": "Pat. Tax",
-  "company_tax": "Comp. Tax",
-  "total_tax": "Total Tax",
-  "patient_resp": "Pat. Resp.",
-  "patient_payable": "Pat. Payable",
-  "comapany_resp": "Comp. Resp.",
-  "company_payble": "Comp. Payable",
-  "sec_company": "Sec. Comp. ",
-  "sec_deductable_amount": "",
-  "sec_company_res": "",
-  "sec_company_tax": "",
-  "sec_company_paybale": "",
-  "sec_copay_amount": ""
+  "bill": "Bill",
+  "gross_total": "Gross Total",
+  "share": "Share",
+  "patient_share": "Patient",
+  "company_share": "Company",
+  "advance": "Advance",
+  "advance_adjust": "Adjust",
+  "sheet_discount": "Sheet Level Discount",
+  "sheet_discount_amount": "Amount",
+  "bill_amount": "Bill Amount",
+  "net_amount": "Net",
+  "credit_amount": "Credit",
+  "receiveable_amount": "Receivable",
+  "receipt_number": "Receipt Number",
+  "receipt_date": "Receipt Date",
+  "counter": "Counter",
+  "shift": "Shift",
+  "total_amount": "Total Amount",
+  "sl_no": "Sl No.",
+  "pay_type": "Pay Type",
+  "card_check_number": "Number",
+  "expiry_date": "Date",
+  "amount": "Amount",
+  "unbalanced_amount": "Unbalanced Amount"
 }
