--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -74,13 +74,13 @@
   "receiveable_amount": "Receivable",
   "receipt_number": "Receipt Number",
   "receipt_date": "Receipt Date",
-  "counter": "Counter",
-  "shift": "Shift",
+  "counter_id": "Counter",
+  "shift_id": "Shift",
   "total_amount": "Total Amount",
   "sl_no": "Sl No.",
   "pay_type": "Pay Type",
   "card_check_number": "Number",
-  "expiry_date": "Date",
+  "expiry_date": "Expiry Date",
   "amount": "Amount",
   "unbalanced_amount": "Unbalanced Amount"
 }
