--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -82,5 +82,37 @@
   "card_check_number": "Number",
   "expiry_date": "Expiry Date",
   "amount": "Amount",
-  "unbalanced_amount": "Unbalanced Amount"
+  "unbalanced_amount": "Unbalanced Amount",
+  "service_type_id": "Service Type",
+  "services_id": "Service",
+  "quantity": "Quantity",
+  "unit_cost": "Unit Cost",
+  "gross_amount": "Gross Amount",
+  "discount_percentage": "Discount %",
+  "discount_amout": "Discount Amt.",
+  "net_amout": "Net Amount",
+  "insurance": "Insurance",
+  "copay_percentage": "Copay %",
+  "copay_amount": "Copay Amt.",
+  "deductable_percentage": "Deductable %",
+  "deductable_amount": "Deductable Amt.",
+  "tax_inclusive": "Tax Inclusive",
+  "patient_tax": "Patient Tax",
+  "company_tax": "Company Tax",
+  "total_tax": "Total Tax",
+  "patient_resp": "Patient Responsible",
+  "patient_payable": "Patient Share",
+  "comapany_resp": "Company Responsible",
+  "company_payble": "Company Payable",
+  "sec_company": "Secondary Insurance",
+  "sec_deductable_amount": "Deductable Amt.",
+  "sec_deductable_percentage": "Deductable %",
+  "sec_company_res": "Company Responsible",
+  "sec_company_tax": "Secondary Company Tax",
+  "sec_company_paybale": "Secondary Company Share",
+  "sec_copay_percntage": "Copay %",
+  "sec_copay_amount": "Copay Amt.",
+  "tax_Detsils": "Tax Details",
+  "prim-insurance": "Primary Insurance",
+  "present-bill-services": "Current Bill Services"
 }
