--- a/client/public/languages/OPBilling_ar.json
+++ b/client/public/languages/OPBilling_ar.json
@@ -17,31 +17,62 @@
   "full_name": "اسم المريض",
 
   "select_service": "اختر الخدمة",
-  "service_type_id": "الخدمات",
-  "services_id": "قانون الفاتورة",
+
+  "gross_total": "المجموع الكلي",
+  "advance_adjust": "يعدل",
+  "sheet_discount_amount": "كمية",
+  "bill_amount": "مبلغ الفاتورة",
+  "sheet_discount": "خصم ورقة المستوى",
+  "net_amount": "شبكة",
+  "credit_amount": "ائتمان",
+  "receiveable_amount": "ذمم مدينة",
+
+  "service_type_id": "نوع الخدمة",
+  "services_id": "الخدمات",
   "quantity": "كمية",
   "unit_cost": "تكلفة الوحدة",
   "gross_amount": "المبلغ الإجمالي",
-  "discount_percentage": "خصم %",
+  "discount_percentage": "خصم ٪",
   "discount_amout": "مقدار الخصم",
   "net_amout": "كمية الشبكة",
   "insurance": "تأمين",
-  "copay_amount": "كمية المبلغ",
-  "deductable_amount": "المبلغ القابل للاقتطاع",
+  "copay_percentage": "كوباي٪",
+  "copay_amount": "مبلغ التعويض",
+
+  "deductable_percentage": "خصم ٪",
+  "deductable_amount": "مقدار الخصم",
+
   "tax_inclusive": "الضرائب شاملة",
-  "patient_tax": "ضريبة المريض",
+  "patient_tax": "ضريبة المرضى",
   "company_tax": "ضريبة الشركات",
+  "sec_company_tax": "ضريبة الشركات الثانوية",
   "total_tax": "مجموع الضريبة",
-  "patient_resp": "المريض المسؤولية",
-  "patient_payable": "المريض مستحق",
-  "comapany_resp": "مسؤولية الشركة",
-  "company_payble": "شركة مستحقة الدفع",
-  "sec_company": "",
-  "sec_deductable_amount": "",
-  "sec_company_res": "",
-  "sec_company_tax": "",
-  "sec_company_paybale": "",
-  "sec_copay_amount": "",
+
+  "patient_resp": "المريض المسؤول",
+  "patient_payable": "حصة المريض",
+  "comapany_resp": "شركة مسؤولة",
+  "company_payble": "شركة حصة",
+
+  "sec_company": "التأمين الثانوي",
+  "sec_deductable_percentage": "خصم ٪",
+  "sec_deductable_amount": "مقدار الخصم",
+
+  "sec_company_res": "شركة مسؤولة",
+  "sec_company_paybale": "شركة ثانوية",
+
+  "sec_copay_percntage": "كوباي٪",
+  "sec_copay_amount": "مبلغ التعويض",
+
+  "tax_Detsils": "تفاصيل الضريبة",
+  "prim-insurance": "تأمين ابتدائي",
+  "present-bill-services": "خدمات الفواتير الحالية",
+
+  "advance_amount": "تقدم مقدما",
+  "advance_caption": "تقدم",
+  "refund_caption": "إعادة مال",
+
+  "payment_number": "رقم الدفع",
+  "payment_date": "تاريخ الدفع",
 
   "receipt_number": "عدد إيصال",
   "receipt_date": "تاريخ استلام",
