--- a/client/public/languages/OPBilling_en.json
+++ b/client/public/languages/OPBilling_en.json
@@ -18,6 +18,27 @@
 
   "select_service": "Select Service",
 
+  "gross_total": "Gross Total",
+  "advance": "Advance",
+  "advance_adjust": "Adjust",
+  "bill_amount": "Bill Amount",
+  "net_amount": "Net Total",
+  "credit_amount": "Credit",
+  "receiveable_amount": "Receivable",
+  "sub_total_amount": "Sub Total",
+  "discount_amount": "Discount",
+
+  "sheet_discount_percentage": "Sheet Level %",
+  "sheet_discount_amount": "Sheet Level Amount",
+
+  "patient": "Patient",
+  "company": "Company",
+  "seco_company": "Secondary Company",
+
+  "responsiblity": "Responsiblity",
+  "tax": "Tax",
+  "payable": "Payable",
+
   "service_type_id": "Service Type",
   "services_id": "Service",
   "quantity": "Quantity",
@@ -27,22 +48,38 @@
   "discount_amout": "Discount Amt.",
   "net_amout": "Net Amount",
   "insurance": "Insurance",
+  "copay_percentage": "Copay %",
   "copay_amount": "Copay Amt.",
+  "deductable_percentage": "Deductable %",
   "deductable_amount": "Deductable Amt.",
   "tax_inclusive": "Tax Inclusive",
-  "patient_tax": "Pat. Tax",
-  "company_tax": "Comp. Tax",
+  "patient_tax": "Patient Tax",
+  "company_tax": "Company Tax",
   "total_tax": "Total Tax",
-  "patient_resp": "Pat. Resp.",
-  "patient_payable": "Pat. Payable",
-  "comapany_resp": "Comp. Resp.",
-  "company_payble": "Comp. Payable",
-  "sec_company": "Sec. Comp. ",
-  "sec_deductable_amount": "",
-  "sec_company_res": "",
-  "sec_company_tax": "",
-  "sec_company_paybale": "",
-  "sec_copay_amount": "",
+  "patient_resp": "Patient Responsible",
+  "patient_payable": "Patient Share",
+  "comapany_resp": "Company Responsible",
+  "company_payble": "Company Share",
+  "sec_company": "Secondary Insurance",
+  "sec_deductable_amount": "Deductable Amt.",
+  "sec_deductable_percentage": "Deductable %",
+  "sec_company_res": "Company Responsible",
+  "sec_company_tax": "Secondary Company Tax",
+  "sec_company_paybale": "Secondary Company Share",
+  "sec_copay_percntage": "Copay %",
+  "sec_copay_amount": "Copay Amt.",
+  "tax_Detsils": "Tax Details",
+  "prim-insurance": "Primary Insurance",
+  "present-bill-services": "Current Bill Services",
+  "advance_amount": "Available Advance",
+  "advance_caption": "Advance",
+  "refund_caption": "Refund",
+
+  "seco_copay_amount": "Secondary Copay Amt.",
+  "seco_deductable_amount": "Secondary Deductable Amt.",
+
+  "payment_number": "Payment Number",
+  "payment_date": "Payment Date",
 
   "receipt_number": "Receipt Number",
   "receipt_date": "Receipt Date",
