--- a/client/public/languages/OPBilling_ar.json
+++ b/client/public/languages/OPBilling_ar.json
@@ -92,5 +92,12 @@
 
   "patient_lbl": "صبور",
   "company_lbl": "الشركة الرئيسية",
-  "sec_comp_lbl": "شركة ثانوية"
+  "sec_comp_lbl": "شركة ثانوية",
+
+  "insurance_company": "شركة التأمين",
+  "sub_insurance_company": "شركة التأمين الفرعية",
+  "plan_desc": "خطة",
+  "policy_no": "رقم مركز الشرطه",
+  "card_no": "رقم البطاقة",
+  "ins_expiry_date": "تاريخ الانتهاء"
 }
