Op billimg and other screen beatifiv=cation done

--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -147,5 +147,7 @@
   "patient_lbl": "صبور",
   "company_lbl": "الشركة الرئيسية",
   "sec_comp_lbl": "شركة ثانوية",
-  "card_number": "رقم البطاقة"
+  "card_number": "رقم البطاقة",
+
+  "bill_details": "تفاصيل الفاتورة"
 }
