--- a/client/public/languages/InsuranceSetup_ar.json
+++ b/client/public/languages/InsuranceSetup_ar.json
@@ -39,5 +39,7 @@
   "medicine": "دواء",
   "deductible": "خصم",
   "co_pay": "CoPay",
-  "max_limit": "الحد الأقصى"
+  "max_limit": "الحد الأقصى",
+
+  "add_insurance": "إضافة التأمين"
 }
