--- a/client/public/languages/CommonSetup_ar.json
+++ b/client/public/languages/CommonSetup_ar.json
@@ -18,12 +18,20 @@
   "equipment_type_code": "رمز نوع المعدات",
   "equipment_type_name": "اسم نوع المعدات",
   "visit_type": "نوع الزيارة",
-  "visit_type_code": "زيارة نوع الرمز",
-  "visit_type_name": "زيارة نوع الاسم",
+
   "visa_type": "نوع الفيزا",
   "visa_type_code": "رمز نوع التأشيرة",
   "visa_type_name": "اسم نوع التأشيرة",
   "identification_type": "نوع الهوية",
   "identity_document_code": "رمز هوية",
-  "identity_document_name": "اسم المعرّف"
+  "identity_document_name": "اسم المعرّف",
+  "consultation": "تشاور",
+  "Addbutton": "أضف إلى القائمة",
+  "Updatebutton": "تحديث",
+
+  "type_code": "الشفرة",
+  "type_desc": "لاسم",
+  "arabic_type_desc": "الاسم العربي",
+  "created_by": "صنع من قبل",
+  "created_date": "الإنشاءخ تاريخ"
 }
