Insurance setup update

--- a/client/public/languages/InsuranceSetup_en.json
+++ b/client/public/languages/InsuranceSetup_en.json
@@ -55,5 +55,6 @@
   "dental_max": "Dental Max Limit",
   "copay_medicine": "Medicine Cooay",
   "medicine_max": "Max Limit",
-  "arabic_provider_name": "Arabic Name"
+  "arabic_provider_name": "Arabic Name",
+  "update_insurance": "Update"
 }
