--- a/client/public/languages/InsuranceSetup_en.json
+++ b/client/public/languages/InsuranceSetup_en.json
@@ -41,7 +41,7 @@
   "co_pay": "Co Pay",
   "max_limit": "Max Limit",
 
-  "add_insurance": "Add Insurance",
+  "add_insurance": "Insurance",
   "service_type": "Service Type",
 
   "copay_consultation": "Consultation Copay",
@@ -56,5 +56,18 @@
   "copay_medicine": "Medicine Cooay",
   "medicine_max": "Max Limit",
   "arabic_provider_name": "Arabic Name",
-  "update_insurance": "Update"
+  "update_insurance": "Update",
+
+  "service_name": "Service Name",
+  "cpt_code": "CPT Code",
+  "insurance_service_name": "Insurance Service Name",
+  "gross_amt": "Gross Amount",
+  "corporate_discount_percent": "Discount %",
+  "corporate_discount_amt": "Discount Amount",
+  "net_amount": "Claim Amount",
+  "pre_approval": "Pre Approval",
+  "covered": "Covered",
+
+  "corporate_discount": "Corporate Discount",
+  "applicable": "Applicable"
 }
