Ordering and pre approval part done

--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -40,8 +40,10 @@
   "mlc_police_station": "Police Station Name",
   "mlc_wound_certified_date": "Wound Certified Date",
   "visit_code": "Visit Code",
-  "btn_save": "save",
-  "btn_clear": "clear",
+  "btn_save": "Save",
+  "btn_clear": "Clear",
+  "btn_advance": "Advance",
+  "btn_refund": "Refund",
   "tab_patdtls": "Patient Details",
   "tab_othinf": "Other Information",
   "tab_condtls": "Consultation Details",
