Pre approval screen and get orders when visit is selected

--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -42,6 +42,9 @@
   "visit_code": "رمز الزيارة",
   "btn_save": "حفظ",
   "btn_clear": "واضح",
+  "btn_advance": "تقدم",
+  "btn_refund": "إعادة مال",
+
   "tab_patdtls": "تفاصيل المريض",
   "tab_othinf": "معلومات أخرى",
   "tab_condtls": "تفاصيل التشاور",
