--- a/client/public/languages/OrderingServices_en.json
+++ b/client/public/languages/OrderingServices_en.json
@@ -35,5 +35,6 @@
   "sec_copay_percntage": "Copay %",
   "sec_copay_amount": "Copay Amt.",
 
-  "pre_approval": "Pre Approval"
+  "pre_approval": "Pre Approval",
+  "btnsave": "Save"
 }
