Lab specimen collection and pre approval changes done

--- a/client/public/languages/PreApproval_en.json
+++ b/client/public/languages/PreApproval_en.json
@@ -33,5 +33,6 @@
   "valid_upto": "Valid Upto",
   "remarks": "Remarks",
   "btnchoose_file": "Choose File",
-  "btnupdate": "Update"
+  "btnupdate": "Update",
+  "updateorders": "Verify And Refelect"
 }
