--- a/client/public/languages/SampleCollection_en.json
+++ b/client/public/languages/SampleCollection_en.json
@@ -11,5 +11,6 @@
   "ordered_date": "Ordered Date",
   "ordered_time": "Ordered Time",
   "test_status": "Test Status",
-  "case_type": "Case Type"
+  "case_type": "Case Type",
+  "action": "Actions"
 }
