--- a/client/public/languages/InvestigationSetup_en.json
+++ b/client/public/languages/InvestigationSetup_en.json
@@ -1,23 +1,25 @@
 {
   "investigation_setup": "Investigation Setup",
-  "lab_settings": "Settings",
-  "lab_section": "Lab Section",
-  "lab_container": "Lab Container",
-  "lab_specimen": "Lab Specimen",
-  "lab_equipment": "Equipment",
-  "lab_analyte": "Analyte",
 
-  "Addbutton": "Add to list",
-
+  "investigation_settings": "Settings",
   "type_code": "Code",
-  "type_desc": "Description",
-  "inv_status": "Status",
-  "arabic_type_desc": "Arabic Name",
+  "test_name": "Test Name",
+  "short_description": "Short Description",
+  "investigation_type": "Investigation Type",
+  "action": "Action",
+  "category_id": "Category",
+
   "created_by": "Created By",
   "created_date": "Created Date",
 
-  "storage_type": "Storage Type",
-  "machine_analyte_code": "Machine Analyte Code",
-  "analyte_type": "Analyte Type",
-  "result_unit": "Result Unit"
+  "lab_section_id": "Lab Section",
+  "send_out_test": "Send Out",
+  "available_in_house": "Available in House",
+  "restrict_order": "Restrict Order",
+  "restrict_by": "Restrict By",
+  "external_facility_required": "External Facility Required",
+  "priority": "Priority",
+  "facility_description": "Facility Description",
+  "from_investigation": "Investigation",
+  "cpt_id": "CPT"
 }
