--- a/client/public/languages/SampleCollection_en.json
+++ b/client/public/languages/SampleCollection_en.json
@@ -21,5 +21,7 @@
   "collected_date": "Collected Date",
   "collected": "Collect",
 
-  "btnclose": "Close"
+  "btnclose": "Close",
+  "form_name": "Sample Collection",
+  "form_home": "Home"
 }
