Radiology apis and ordering changes done

--- a/client/public/languages/InvestigationSetup_en.json
+++ b/client/public/languages/InvestigationSetup_en.json
@@ -25,6 +25,7 @@
   "specimen_id": "Specimen",
   "analyte_id": "Select Analyte",
   "analytes_id": "Analytes",
+  "container_id": "Container",
   "film_category": "Film Category",
   "screening_test": "Screening Test",
   "film_used": "Film Used",
