--- a/client/public/languages/InvestigationSetup_en.json
+++ b/client/public/languages/InvestigationSetup_en.json
@@ -33,5 +33,10 @@
   "services_id": "Service",
   "btnSave": "Save",
   "btnUpdate": "Update",
-  "btnCancel": "Cancel"
+  "btnCancel": "Cancel",
+
+  "normal_low": "Normal Low",
+  "normal_high": "Normal High",
+  "critical_low": "Critical Low",
+  "critical_high": "Critical High"
 }
