front desk changes and lab result entry changes done

--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -22,8 +22,8 @@
   "country_id": "Country",
   "state_id": "State",
   "city_id": "City",
-  "primary_identity_id": "Primary ID",
-  "primary_id_no": "Number",
+  "primary_identity_id": "Primary ID Type",
+  "primary_id_no": "Primary ID Number",
   "secondary_identity_id": "Secondary ID",
   "secondary_id_no": "Number",
   "secondary_contact_number": "Secondary Contact Number",
