Front-desk Billing area UI tweak

--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -87,7 +87,7 @@
   "expiry_date": "تاريخ الانتهاء",
   "amount": "كمية",
   "unbalanced_amount": "المبلغ غير المتوازن",
-
+  "bill_date": "تاريخ الفاتورة",
   "service_type_id": "نوع الخدمة",
   "services_id": "الخدمات",
   "quantity": "كمية",
