--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -61,7 +61,7 @@
   "hijiri_date": "Hijiri Date",
   "attach_photo": "Attach Photo",
   "attach_idcard": "Attach ID Card",
-  "bill": "Bill",
+  "bill": "Bill Number",
   "gross_total": "Gross Total",
   "share": "Share",
   "patient_share": "Patient",
@@ -140,6 +140,6 @@
   "attach_front": "Front Side",
   "attach_back": "Back Side",
   "card_number": "Card Number",
-
+  "bill_date": "Bill Date",
   "bill_details": "Bill Details"
 }
